--- a/extractEmotion.ipynb
+++ b/extractEmotion.ipynb
@@ -2,20 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import re\n",
+    "import string\n",
+    "\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords"
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
+    "from nltk.tokenize import RegexpTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +30,7 @@
        "(30, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +146,7 @@
        "4  Party the people, the people the party it's po...       312.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,19 +159,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Replace Stopwords"
+    "# Replace Stopwords & Puncutation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def repl_stp(ly):\n",
-    "    for stpw in stopwords.words('english'):\n",
-    "        ly = ly.replace(stpw, '')\n",
-    "    return ly"
+    "    ly_tokenized_words = word_tokenize(ly)\n",
+    "    filtered_stopwords_ly = list(filter(lambda word: word not in stopwords.words('english'), ly_tokenized_words))\n",
+    "    punctutaion_ly = [w for w in filtered_stopwords_ly if not re.fullmatch('[' + string.punctuation + ']+', w)]\n",
+    "    return punctutaion_ly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Oh', 'baby', 'You', 'know', 'I', \"'m\", 'gon', 'na', 'cut']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repl_stp(\"Oh baby, how you doing? You know I'm gonna cut\")"
    ]
   },
   {
