--- a/extractEmotion.ipynb
+++ b/extractEmotion.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "from random import randint\n",
     "\n",
     "import re\n",
     "import string\n",
@@ -16,33 +20,38 @@
     "from nltk.corpus import stopwords\n",
     "\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from nltk.tokenize import RegexpTokenizer"
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "import paralleldots\n",
+    "paralleldots.set_api_key(\"OwoCuujTTYS5o3Vrx0M4A7RevaHLs7uUHlUD3Afa0XI\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(30, 7)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(30, 7)\n"
+     ]
     }
    ],
    "source": [
     "df = pd.read_csv('./en_df_sample_30.csv')\n",
-    "df.shape"
+    "df = df.sample(frac=1)\n",
+    "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +86,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>poison</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>You're bad for me I clearly get it I don't see...</td>\n",
+       "      <td>516.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>i-m-alone-now</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>It really hurts to say this yes it does But af...</td>\n",
+       "      <td>258.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>30</td>\n",
+       "      <td>a-girl-with-no-name</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>You don't care about me at all You treat me li...</td>\n",
+       "      <td>224.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>ego-remix</td>\n",
@@ -87,72 +126,42 @@
        "      <td>433.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>then-tell-me</td>\n",
-       "      <td>2009</td>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>world-wide-women</td>\n",
+       "      <td>2007</td>\n",
        "      <td>beyonce-knowles</td>\n",
        "      <td>Pop</td>\n",
-       "      <td>playin' everything so easy, it's like you seem...</td>\n",
-       "      <td>258.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>honesty</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>beyonce-knowles</td>\n",
-       "      <td>Pop</td>\n",
-       "      <td>If you search For tenderness It isn't hard to ...</td>\n",
-       "      <td>170.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>you-are-my-rock</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>beyonce-knowles</td>\n",
-       "      <td>Pop</td>\n",
-       "      <td>Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...</td>\n",
-       "      <td>522.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>black-culture</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>beyonce-knowles</td>\n",
-       "      <td>Pop</td>\n",
-       "      <td>Party the people, the people the party it's po...</td>\n",
-       "      <td>312.0</td>\n",
+       "      <td>[Chorus:] I'm a world wide woman WWW you can l...</td>\n",
+       "      <td>469.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index             song  year           artist genre  \\\n",
-       "0      0        ego-remix  2009  beyonce-knowles   Pop   \n",
-       "1      1     then-tell-me  2009  beyonce-knowles   Pop   \n",
-       "2      2          honesty  2009  beyonce-knowles   Pop   \n",
-       "3      3  you-are-my-rock  2009  beyonce-knowles   Pop   \n",
-       "4      4    black-culture  2009  beyonce-knowles   Pop   \n",
+       "    index                 song  year           artist genre  \\\n",
+       "16     16               poison  2009  beyonce-knowles   Pop   \n",
+       "15     15        i-m-alone-now  2009  beyonce-knowles   Pop   \n",
+       "28     30  a-girl-with-no-name  2007  beyonce-knowles   Pop   \n",
+       "0       0            ego-remix  2009  beyonce-knowles   Pop   \n",
+       "17     17     world-wide-women  2007  beyonce-knowles   Pop   \n",
        "\n",
-       "                                              lyrics  word_count  \n",
-       "0  Oh baby, how you doing? You know I'm gonna cut...       433.0  \n",
-       "1  playin' everything so easy, it's like you seem...       258.0  \n",
-       "2  If you search For tenderness It isn't hard to ...       170.0  \n",
-       "3  Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...       522.0  \n",
-       "4  Party the people, the people the party it's po...       312.0  "
+       "                                               lyrics  word_count  \n",
+       "16  You're bad for me I clearly get it I don't see...       516.0  \n",
+       "15  It really hurts to say this yes it does But af...       258.0  \n",
+       "28  You don't care about me at all You treat me li...       224.0  \n",
+       "0   Oh baby, how you doing? You know I'm gonna cut...       433.0  \n",
+       "17  [Chorus:] I'm a world wide woman WWW you can l...       469.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
@@ -176,23 +185,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Emotion Detect"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_emo(index, emo):\n",
+    "    try:\n",
+    "        with open(r'./lyrics_emotion.json', 'r') as fn:\n",
+    "            emo_dict = json.load(fn)\n",
+    "        emo_dict[index] = emo\n",
+    "    except Exception as e:\n",
+    "        emo_dict = {}\n",
+    "        emo_dict[index] = emo\n",
+    "    with open('./lyrics_emotion.json', 'w') as fp:\n",
+    "        json.dump(emo_dict, fp)\n",
+    "    return index\n",
+    "        \n",
+    "def update_error(index):\n",
+    "    with open(r'./error', 'a') as fn:\n",
+    "        fn.write(str(index) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Oh', 'baby', 'You', 'know', 'I', \"'m\", 'gon', 'na', 'cut']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTPSConnectionPool(host='apis.paralleldots.com', port=443): Max retries exceeded with url: /v4/emotion (Caused by NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x0000012CB5327470>: Failed to establish a new connection: [WinError 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond'))\n",
+      "HTTPSConnectionPool(host='apis.paralleldots.com', port=443): Max retries exceeded with url: /v4/emotion (Caused by NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x0000012CB53BD7B8>: Failed to establish a new connection: [WinError 10060] A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond'))\n",
+      "25 done:  3.33333\n",
+      "27 done:  6.66667\n",
+      "4 done:  10.0\n",
+      "2 done:  13.33333\n",
+      "8 done:  16.66667\n",
+      "3 done:  20.0\n",
+      "13 done:  23.33333\n",
+      "18 done:  26.66667\n",
+      "1 done:  30.0\n",
+      "11 done:  33.33333\n",
+      "22 done:  36.66667\n",
+      "9 done:  40.0\n",
+      "6 done:  43.33333\n",
+      "7 done:  46.66667\n",
+      "12 done:  50.0\n",
+      "16 done:  53.33333\n",
+      "5 done:  56.66667\n",
+      "10 done:  60.0\n",
+      "28 done:  63.33333\n",
+      "26 done:  66.66667\n",
+      "17 done:  70.0\n",
+      "23 done:  73.33333\n",
+      "0 done:  76.66667\n",
+      "21 done:  80.0\n",
+      "15 done:  83.33333\n",
+      "20 done:  86.66667\n",
+      "19 done:  90.0\n",
+      "24 done:  93.33333\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
-    "repl_stp(\"Oh baby, how you doing? You know I'm gonna cut\")"
+    "lyric_emo = df['lyrics'].tolist()\n",
+    "index_list = df.index.tolist()\n",
+    "\n",
+    "total = len(index_list)\n",
+    "count = 1\n",
+    "error_count = 0\n",
+    "\n",
+    "for index, lyrics in zip(index_list, lyric_emo):\n",
+    "    randtime = randint(0, 4)\n",
+    "    try:\n",
+    "        time.sleep(randtime)\n",
+    "        response = paralleldots.emotion(lyrics)\n",
+    "        finished_index = update_emo(index, response)\n",
+    "        print(finished_index, 'done: ', str(round((count/total)*100, 5)))\n",
+    "        count += 1\n",
+    "    except Exception as e:\n",
+    "        update_error(str(index) + '\\t' + str(e))\n",
+    "        error_count += 1\n",
+    "        print(e)\n",
+    "        if '403' in str(e):\n",
+    "            break\n",
+    "\n",
+    "print(error_count)\n",
+    "\n",
+    "\n",
+    "# # for single sentence\n",
+    "# text=\"I am trying to imagine you with a personality.\"\n",
+    "# response=paralleldots.emotion(text)\n",
+    "# print(response)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # for multiple sentence as array\n",
+    "# text=[\"I am trying to imagine you with a personality.\",\"This is shit.\"]\n",
+    "# response=paralleldots.batch_emotion(text)\n",
+    "# print(response)\n"
    ]
   },
   {
