--- a/extractEmotion.ipynb
+++ b/extractEmotion.ipynb
@@ -270,6 +270,10 @@
     "    try:\n",
     "        time.sleep(randtime)\n",
     "        response = paralleldots.emotion(lyrics)\n",
+    "        if 'code' in response:\n",
+    "            if response['code'] == 403:\n",
+    "                print('Stop at', str(index))\n",
+    "                break\n",
     "        finished_index = update_emo(index, response)\n",
     "        print(finished_index, 'done: ', str(round((count/total)*100, 5)))\n",
     "        count += 1\n",
@@ -277,8 +281,7 @@
     "        update_error(str(index) + '\\t' + str(e))\n",
     "        error_count += 1\n",
     "        print(e)\n",
-    "        if '403' in str(e):\n",
-    "            break\n",
+    "        pass\n",
     "\n",
     "print(error_count)\n",
     "\n",
