--- a/extractEmotion.ipynb
+++ b/extractEmotion.ipynb
@@ -27,7 +27,16 @@
     "import json\n",
     "\n",
     "import paralleldots\n",
-    "paralleldots.set_api_key(\"OwoCuujTTYS5o3Vrx0M4A7RevaHLs7uUHlUD3Afa0XI\")"
+    "paralleldots.set_api_key(\"OwoCuujTTYS5o3Vrx0M4A7RevaHLs7uUHlUD3Afa0XI\") # laualan@hku.hk\n",
+    "\n",
+    "keys = [\n",
+    "#         'OwoCuujTTYS5o3Vrx0M4A7RevaHLs7uUHlUD3Afa0XI', # laualan@hku.hk\n",
+    "        'DwGe3alGduDGJnE1FT3O112wMDNJhZDnGysR0KFfZgY', # rlalan@outlook.com\n",
+    "        'JIkATWugt8LIP3PbQrdm6cfm1hZ4DbouVoyw8oAQqhI', # 394414515@qq.com\n",
+    "        'Vf9mBAl7wp0s8Fl43E9aDtVPOZhftIAv0pYJvIlYGD4', # 806124854@qq.com\n",
+    "        '8gAwuDOEE92zakGfDXc6PoCtqhVop0htEnEd4IHFe0U', # yleun.lau@gmail.com\n",
+    "        'xTNXoCxtbg36jCgT6ArKgyOPJtnJdf5QQpEEKYoSwu8' # alanconstantinelau@gmail.com\n",
+    "        ]"
    ]
   },
   {
@@ -44,7 +53,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./en_df_sample_30.csv')\n",
+    "df = pd.read_csv('./reindex_df.csv')\n",
     "df = df.sample(frac=1)\n",
     "print(df.shape)"
    ]
@@ -193,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +220,18 @@
     "        \n",
     "def update_error(index):\n",
     "    with open(r'./error', 'a') as fn:\n",
-    "        fn.write(str(index) + '\\n')"
+    "        fn.write(str(index) + '\\n')\n",
+    "        \n",
+    "def get_stopindex():\n",
+    "#     with open(r'./error', 'r') as fn:\n",
+    "#         index = (fn.readlines()[-1]).split('\\t')[0]\n",
+    "    try:\n",
+    "        with open(r'./lyrics_emotion.json', 'r') as fn:\n",
+    "                emo_dict = json.load(fn)\n",
+    "        return max(list(map(lambda e: int(e), list(emo_dict.keys()))))\n",
+    "    except Exception as e:\n",
+    "        return -1\n",
+    "    "
    ]
   },
   {
@@ -264,17 +284,29 @@
     "total = len(index_list)\n",
     "count = 1\n",
     "error_count = 0\n",
+    "key_count = 0\n",
     "\n",
-    "for index, lyrics in zip(index_list, lyric_emo):\n",
+    "for index, lyrics in list(zip(index_list, lyric_emo))[get_stopindex() + 1:]:\n",
     "    randtime = randint(0, 4)\n",
     "    try:\n",
     "        time.sleep(randtime)\n",
     "        response = paralleldots.emotion(lyrics)\n",
-    "        if 'code' in response:\n",
-    "            if response['code'] == 403:\n",
-    "                print('Stop at', str(index))\n",
-    "                break\n",
+    "        if 'code' in response and key_count < len(keys):\n",
+    "            # if response['code'] == 403:\n",
+    "            key_count += 1\n",
+    "            print('Current key:', keys[key_count])\n",
+    "            paralleldots.set_api_key(keys[key_count])\n",
+    "            response = paralleldots.emotion(lyrics)\n",
+    "        elif key_count == len(keys):\n",
+    "            print('Stop at', str(index))\n",
+    "            update_error(str(index) + '\\tStop.')\n",
+    "            break\n",
+    "        if 'message' in response:\n",
+    "            print('Stop at', str(index))\n",
+    "            update_error(str(index) + '\\t' + str(response['message']))\n",
+    "            break\n",
     "        finished_index = update_emo(index, response)\n",
+    "#         TODO\n",
     "        print(finished_index, 'done: ', str(round((count/total)*100, 5)))\n",
     "        count += 1\n",
     "    except Exception as e:\n",
