--- a/textMining.ipynb
+++ b/textMining.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,15 @@
     "import string\n",
     "\n",
     "import nltk\n",
-    "from nltk.corpus import stopwords\n",
+    "\n",
     "\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "from nltk.tokenize import RegexpTokenizer\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import *\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "from sklearn.utils import shuffle\n",
     "\n",
@@ -46,6 +51,121 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>song</th>\n",
+       "      <th>year</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>lyrics</th>\n",
+       "      <th>word_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ego-remix</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Oh baby, how you doing? You know I'm gonna cut...</td>\n",
+       "      <td>433.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>then-tell-me</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>playin' everything so easy, it's like you seem...</td>\n",
+       "      <td>258.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>honesty</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>If you search For tenderness It isn't hard to ...</td>\n",
+       "      <td>170.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>you-are-my-rock</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...</td>\n",
+       "      <td>522.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>black-culture</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Party the people, the people the party it's po...</td>\n",
+       "      <td>312.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index             song  year           artist genre  \\\n",
+       "0      0        ego-remix  2009  beyonce-knowles   Pop   \n",
+       "1      1     then-tell-me  2009  beyonce-knowles   Pop   \n",
+       "2      2          honesty  2009  beyonce-knowles   Pop   \n",
+       "3      3  you-are-my-rock  2009  beyonce-knowles   Pop   \n",
+       "4      4    black-culture  2009  beyonce-knowles   Pop   \n",
+       "\n",
+       "                                              lyrics  word_count  \n",
+       "0  Oh baby, how you doing? You know I'm gonna cut...       433.0  \n",
+       "1  playin' everything so easy, it's like you seem...       258.0  \n",
+       "2  If you search For tenderness It isn't hard to ...       170.0  \n",
+       "3  Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...       522.0  \n",
+       "4  Party the people, the people the party it's po...       312.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,15 +174,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def repl_stp(ly):\n",
+    "def pre_represent(ly):\n",
     "    ly_tokenized_words = word_tokenize(ly)\n",
-    "    filtered_stopwords_ly = list(filter(lambda word: word not in stopwords.words('english'), ly_tokenized_words))\n",
-    "    punctutaion_ly = [w for w in filtered_stopwords_ly if not re.fullmatch('[' + string.punctuation + ']+', w)]\n",
-    "    return punctutaion_ly"
+    "    filtered_stopwords_ly = list(filter(lambda word: word not in stopwords.words('english'), ly_tokenized_words)) # removing stopwords\n",
+    "    punctutaion_ly = [stemmer.stem(w) for w in filtered_stopwords_ly if not re.fullmatch('[' + string.punctuation + ']+', w)] # removing puncutation and then stemming\n",
+    "    return ' '.join(punctutaion_ly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['represent'] = df['lyrics'].apply(pre_represent)\n",
+    "df['word_count'] = df['represent'].str.split().str.len()\n",
+    "df = df[df['word_count'] >= 100]\n",
+    "df = df[df['word_count'] <= 1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = df['represent'].tolist()\n",
+    "vectorizer = TfidfVectorizer(stop_words='english')\n",
+    "tfidf_matrix = vectorizer.fit_transform(corpus)\n",
+    "df_tfidf = pd.DataFrame(tfidf_matrix.toarray(), columns=vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>song_x</th>\n",
+       "      <th>year</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>lyrics</th>\n",
+       "      <th>word_count</th>\n",
+       "      <th>represent</th>\n",
+       "      <th>12</th>\n",
+       "      <th>1st</th>\n",
+       "      <th>...</th>\n",
+       "      <th>www</th>\n",
+       "      <th>x8</th>\n",
+       "      <th>ya</th>\n",
+       "      <th>yard</th>\n",
+       "      <th>ye</th>\n",
+       "      <th>yeah</th>\n",
+       "      <th>yo</th>\n",
+       "      <th>young</th>\n",
+       "      <th>yourl</th>\n",
+       "      <th>youv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ego-remix</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Oh baby, how you doing? You know I'm gonna cut...</td>\n",
+       "      <td>292</td>\n",
+       "      <td>Oh babi you know I 'm gon na cut right chase s...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>then-tell-me</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>playin' everything so easy, it's like you seem...</td>\n",
+       "      <td>129</td>\n",
+       "      <td>playin everyth easi 's like seem sure still wa...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>honesty</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>If you search For tenderness It isn't hard to ...</td>\n",
+       "      <td>134</td>\n",
+       "      <td>If search for tender It n't hard find you love...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>you-are-my-rock</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...</td>\n",
+       "      <td>355</td>\n",
+       "      <td>Oh oh oh I oh oh oh I vers 1 If I wrote book s...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.399787</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>black-culture</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>beyonce-knowles</td>\n",
+       "      <td>Pop</td>\n",
+       "      <td>Party the people, the people the party it's po...</td>\n",
+       "      <td>211</td>\n",
+       "      <td>parti peopl peopl parti 's pop sit around I se...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 821 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index           song_x  year           artist genre  \\\n",
+       "0      0        ego-remix  2009  beyonce-knowles   Pop   \n",
+       "1      1     then-tell-me  2009  beyonce-knowles   Pop   \n",
+       "2      2          honesty  2009  beyonce-knowles   Pop   \n",
+       "3      3  you-are-my-rock  2009  beyonce-knowles   Pop   \n",
+       "4      4    black-culture  2009  beyonce-knowles   Pop   \n",
+       "\n",
+       "                                              lyrics  word_count  \\\n",
+       "0  Oh baby, how you doing? You know I'm gonna cut...         292   \n",
+       "1  playin' everything so easy, it's like you seem...         129   \n",
+       "2  If you search For tenderness It isn't hard to ...         134   \n",
+       "3  Oh oh oh I, oh oh oh I [Verse 1:] If I wrote a...         355   \n",
+       "4  Party the people, the people the party it's po...         211   \n",
+       "\n",
+       "                                           represent   12  1st  ...  www   x8  \\\n",
+       "0  Oh babi you know I 'm gon na cut right chase s...  0.0  0.0  ...  0.0  0.0   \n",
+       "1  playin everyth easi 's like seem sure still wa...  0.0  0.0  ...  0.0  0.0   \n",
+       "2  If search for tender It n't hard find you love...  0.0  0.0  ...  0.0  0.0   \n",
+       "3  Oh oh oh I oh oh oh I vers 1 If I wrote book s...  0.0  0.0  ...  0.0  0.0   \n",
+       "4  parti peopl peopl parti 's pop sit around I se...  0.0  0.0  ...  0.0  0.0   \n",
+       "\n",
+       "         ya  yard   ye  yeah   yo  young  yourl  youv  \n",
+       "0  0.000000   0.0  0.0   0.0  0.0    0.0    0.0   0.0  \n",
+       "1  0.000000   0.0  0.0   0.0  0.0    0.0    0.0   0.0  \n",
+       "2  0.000000   0.0  0.0   0.0  0.0    0.0    0.0   0.0  \n",
+       "3  0.399787   0.0  0.0   0.0  0.0    0.0    0.0   0.0  \n",
+       "4  0.000000   0.0  0.0   0.0  0.0    0.0    0.0   0.0  \n",
+       "\n",
+       "[5 rows x 821 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tfidf['index'] = df_tfidf.index\n",
+    "df = df.merge(df_tfidf, on = 'index', how = 'left').head()\n",
+    "df.to_csv('./represented_lyrics.csv', index = False)"
    ]
   },
   {
