--- a/fiterror.ipynb
+++ b/fiterror.ipynb
@@ -1204,6 +1204,59 @@
     "        print(k)\n",
     "        print(v)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70235"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(emo_fixed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'emotion': {'Fear': 0.2107523579,\n",
+       "  'Sad': 0.2591371423,\n",
+       "  'Bored': 0.0815402242,\n",
+       "  'Happy': 0.2017061049,\n",
+       "  'Excited': 0.0812641845,\n",
+       "  'Angry': 0.1655999862},\n",
+       " 'time': '2020-04-27 16:38:49.211029'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emo_fixed['4997']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
